fix z-index

--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -20,7 +20,7 @@
 
         .hero-content {
             position: relative;
-            z-index: 999;
+            z-index: 10;
             margin: 0 auto;
 
             h1 {
