--- a/src/app/quiz/mock/register/registerQuiz.scss
+++ b/src/app/quiz/mock/register/registerQuiz.scss
@@ -11,7 +11,7 @@
 
         .hero-content-wrapper {
             position: relative;
-            z-index: 999;
+            z-index: 10;
 
             h1 {
                 font-size: var(--fz-2xl);
