--- a/src/components/UI/RotatingCircles/circles.scss
+++ b/src/components/UI/RotatingCircles/circles.scss
@@ -33,7 +33,7 @@
             position: absolute;
             border-radius: 50%;
             background: #8000ff;
-            z-index: 99;
+            z-index: 5;
             box-shadow: 0 0 15px rgba(128, 0, 255, 0.7);
         }
     }
